[project]
requires-python = "3.10"

[tool.poetry]
name = "valorant-audio"
version = "0.1.0"
description = ""
authors = ["Virace <Virace@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ue4parse = {git = "ssh://git@github.com/MinshuG/pyUE4Parse.git"}
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
